force-app/main/default/objects/Lead/fields/Closing_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closing_Reason__c</fullName>
    <label>Closing Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost_Price</fullName>
                <label>Lost - Price</label>
            </value>
            <value>
                <fullName>Lost_No_Response</fullName>
                <label>Lost - No Response</label>
            </value>
            <value>
                <fullName>Lost_Not_Interested</fullName>
                <label>Lost - Not Interested</label>
            </value>
            <value>
                <fullName>Lost_Duplicate</fullName>
                <label>Lost - Duplicate</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>