force-app/main/default/objects/Lead/validationRules/Closed_Requires_Outcome_And_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Requires_Outcome_And_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &quot;Closed&quot;) &amp;&amp; (ISBLANK(TEXT(Outcome__c)) || ISBLANK(TEXT(Closing_Reason__c)))</errorConditionFormula>
    <errorMessage>Outcome and Closing Reason are required when a Lead is Closed.</errorMessage>
</ValidationRule>