force-app/main/default/objects/Lead/validationRules/Closing_Reason_Matches_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Closing_Reason_Matches_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(TEXT(Closing_Reason__c))),
    OR(
        AND(ISPICKVAL(Status, &quot;Closed - Won&quot;), NOT(ISPICKVAL(Closing_Reason__c, &quot;Won&quot;))),
        AND(ISPICKVAL(Status, &quot;Closed - Lost&quot;), ISPICKVAL(Closing_Reason__c, &quot;Won&quot;))
    )
)</errorConditionFormula>
    <errorDisplayField>Closing_Reason__c</errorDisplayField>
    <errorMessage>Closing Reason must be &quot;Won&quot; when Status is &quot;Closed - Won&quot;, and cannot be &quot;Won&quot; when Status is &quot;Closed - Lost&quot;.</errorMessage>
</ValidationRule>