force-app/main/default/objects/Lead/validationRules/Closing_Reason_Required_When_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Closing_Reason_Required_When_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISPICKVAL(Status, &quot;Closed - Won&quot;), ISPICKVAL(Status, &quot;Closed - Lost&quot;)) &amp;&amp; ISBLANK(TEXT(Closing_Reason__c))</errorConditionFormula>
    <errorDisplayField>Closing_Reason__c</errorDisplayField>
    <errorMessage>Please select a Closing Reason before closing this Lead.</errorMessage>
</ValidationRule>